<resources>
    <string name="app_name">NKCH</string>
    <string name="logo_description">CTU logo</string>
    <string name="signUp">Đăng kí</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirmPassword">Xác nhận mật khẩu</string>
    <string name="createAccount">TẠO TÀI KHOẢN</string>
    <string name="haveAnAccount">Đã có tài khoản?\ </string>
    <string name="loginLink">Đăng nhập</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="loginTitle">Đăng Nhập</string>
    <string name="haveNoAccount">Chưa có tài khoản?\ </string>
    <string name="signUpLink">Tạo tài khoản</string>
    <string name="forgotPassword">Quên mật khẩu?</string>
    <string name="forgotPasswordLogo">Quên mật khẩu Logo</string>
    <string name="forgotPasswordTitle">QUÊN MẬT KHẨU</string>
    <string name="forgotPasswordSubtext">Xin hãy cung cấp email của tài khoản mà bạn muốn đặt lại mật khẩu!</string>
    <string name="resetPasswordButton">ĐẶT LẠI MẬT KHẨU</string>
    <string name="backButton">QUAY VỀ</string>
    <string name="logout">Đăng xuất</string>
    <string name="setting">Cài đặt</string>
    <string name="userProfile">Thông tin người dùng</string>
    <string name="open_nav">Mở Navigation Drawer</string>
    <string name="close_nav">Đóng Navigation Drawer</string>
    <string name="FlashCardsDesc">Flash Cards</string>
    <string name="FlashCards">Flash cards</string>
    <string name="MindMapDesc">Mind Map</string>
    <string name="MindMap">Mind map</string>
    <string name="FocusDesc">Focus Mode</string>
    <string name="Focus">Hẹn giờ tập trung</string>
    <string name="ProgressTrackerDesc">Progress Tracker</string>
    <string name="ProgressTracker">Theo dỗi tiến trình</string>
    <string name="NoteDesc">Note</string>
    <string name="Note">Ghi chú</string>
    <string name="ReminderDesc">Reminder</string>
    <string name="Reminder">Nhắc nhở</string>
    <string name="UserImageDesc">User Image</string>
    <string name="Hello">Xin chào,</string>
    <string name="UserName">-Tên người dùng-</string>
    <string name="onboarding_title">Start Your Learning Journey with QuickMem!</string>
    <string name="onboarding_title_1">Start Your Learning Journey with QuickMem!</string>
    <string name="onboarding_title_2">Create and Conquer Your Own Flashcards with QuickMem!</string>
    <string name="onboarding_title_3">A Simple and Effective Flashcard Learning Method!</string>
    <string name="onboarding_title_4">Your Companion in the Journey of Knowledge Discovery!</string>
    <string name="quick_sign_up">Quickly signup with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or_sign_up_tv">Or sign up with an email</string>
    <string name="or">or</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email_example">example@email.com</string>
    <string name="select_your_birthday">Select your birthday</string>
    <string name="password_example">•••••••••</string>
    <string name="sign_up_disable">Sign up</string>
    <string name="are_you_a_teacher">Are you a teacher?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="agree_to_terms_and_conditions">By signing up, I accept QuickMem\'s \n <b>Term of Service</b> and <b>Privacy Policy</b></string>
    <string name="date_picker_title">Please enter your date of birth</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date_error">That\'s today date. Please select your date of birth</string>
    <string name="date_geater_than_current_date">That\'s greater than or equal today date. Please select your date of birth</string>
    <string name="email_is_empty">Email is required</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_empty">Password is required</string>
    <string name="password_is_invalid">Password must be at least 8 characters</string>
    <string name="date_is_empty">Plsease select your birthday</string>
    <string name="email_is_exist">Email is exits, please choose another email</string>
    <string name="quick_sign_in">Quickly sign in with</string>
    <string name="sign_in_in">Sign in</string>
    <string name="forgot">Forgot</string>
    <string name="username">username</string>
    <string name="password_lowcase">password</string>
    <string name="terms_and_conditions_login">By logging up, I accept QuickMem\'s \n <b>Terms of service</b> and <b>Privacy policy</b></string>
    <string name="reset_password">Reset your password</string>
    <string name="reset_password_description">Enter your QuickMem username of the \nemail address you signed up with. We\'ll \nemail you a link to sign in and reset your \npassword.</string>
    <string name="username_or_email">Username or email address</string>
    <string name="forgot_username">Forgot your username</string>
    <string name="enter_your_email">Enter email address</string>
    <string name="email_is_not_exist">Email is not exist</string>
    <string name="user_is_not_exist">User is not exist</string>
    <string name="password_is_not_correct">Password is not correct</string>
    <string name="check_your_email">Check your email</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="book">Book</string>
    <string name="classes">Classes</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="create_set">Create study set</string>
    <string name="done">Done</string>
    <string name="custom_set">Custom Set</string>
    <string name="create_folder">Create folder</string>
    <string name="create_class">Create class</string>
    <string name="subject_chapter_topic">Subject, chapter, topic</string>
    <string name="description">+ Description</string>
    <string name="provide_a_description_of_your_set">Provide a description of your set</string>
    <string name="folder_name">Folder name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="new_folder">New Folder</string>
    <string name="class_name">Class name</string>
    <string name="search">Study sets,…</string>
    <string name="set_name">Set Name</string>
    <string name="_1_term">1 term</string>
    <string name="user_name">user name</string>
    <string name="_12_07_2023">12/07/2023</string>
    <string name="sets">Sets</string>
    <string name="view_all">View all</string>
    <string name="folder">Folder</string>
    <string name="group">Class</string>
    <string name="name_profile">hadao1204</string>
    <string name="courses">Your courses</string>
    <string name="settings">Your settings</string>
    <string name="add_course">Add a course</string>
    <string name="text_in_course_profile">Add course so we can get the best study content to you</string>
    <string name="term">terms</string>
    <string name="avatar">avatar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_set">number set</string>
    <string name="number_memeber">number member</string>
    <string name="flashcards">Flashcards</string>
    <string name="flashcards_description">Review terms and definitions</string>
    <string name="learn">Learning</string>
    <string name="review">You\'re doing great!\n Keep focusing on \n your tough terms</string>
    <string name="know">Know</string>
    <string name="still_learning">Still learning</string>
    <string name="terms_left">Terms left</string>
    <string name="keep_learning">Keep Learning</string>
    <string name="reset_learning">Restart FlashCards</string>
    <string name="culminate">culminate</string>
    <string name="focus_on_learning">Focus your studying with a path</string>
    <string name="create_a_folder">Create a folder</string>
    <string name="organize_your_study_sets_by_subject_teacher_course_etc">Organize your study sets by subject, teacher, course, etc.</string>
    <string name="take_the_first_step_towards_better_grades_create_a_study_set">Take the first step towards better grades. Create a study set.</string>
    <string name="create_a_set">Create a set</string>
    <string name="close">Close</string>
    <string name="delete_set">Delete this set</string>
    <string name="delete_set_description">Are you sure you want to delete this set permanently?</string>
    <string name="success">Success</string>
    <string name="delete_set_success">Delete set success!</string>
    <string name="error">Uh oh</string>
    <string name="delete_set_error">Please try again late!</string>
    <string name="create_new_folder">+ Create new folder</string>
    <string name="create_new_classes">+ Create new class</string>
    <string name="name_folder">Name folder</string>
    <string name="learn_this_folder">Learn this folder</string>
    <string name="created">Created</string>
    <string name="loginFailed">Login Fail</string>
    <string name="you_are_blocked">You are blocked \n Contact support for more information</string>
    <string name="log_out">Log out</string>
    <string name="correct">Correct!</string>
    <string name="oops_study_this_one">Oops! Study this one!</string>
    <string name="answer">Answer</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="explanation">Explanation</string>
    <string name="your_answer">Your Answer</string>
    <string name="learn_error">Create less 4 cards to use this feature</string>
    <string name="add_to_folder">Add to folder</string>
    <string name="add_to_class">Add to class</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="reset_success">Reset success!</string>
    <string name="terms">Terms</string>
    <string name="review_error">You need to save this flashcard to learn</string>
    <string name="review_success">Create success!</string>
    <string name="view">View</string>
    <string name="edit_error">No permisson</string>
    <string name="here_s_how_to_get_started">Here\'s how to get started</string>
    <string name="create_your_own_set">Create your own set</string>
    <string name="finish">Coragetion!</string>
    <string name="finish_quiz">You was done</string>
    <string name="reset_error">Reset error!</string>
    <string name="enter_a_topic_or_keywords_n_tips_the_more_specific_the_better">Enter a topic or keywords \n Tips: The more specific, the better!</string>
    <string name="no_result_for_your_search_n_please_try_again">No result for your search, \n please try again.</string>
    <string name="cards_left_30">Cards left: 30</string>
    <string name="this_class_has_no_sets">This class has no sets</string>
    <string name="add_study_sets_to_share_them_with_your_class">Add study sets to share them with your class.</string>
    <string name="add_sets">Add sets</string>
    <string name="add_member">Add member</string>
    <string name="delete_class">Delete class</string>
    <string name="edit_class">Edit</string>
    <string name="name_class">Name class</string>
    <string name="question">Question</string>
    <string name="true_false">True or False</string>
    <string name="true_false_description">Learn super fast</string>
    <string name="your_progress">Your progress</string>
    <string name="review_your_progress_and_see_how_much_you_ve_learned">Review your progress, and see how much you\'ve learned.</string>
    <string name="not_learn_37_terms">Not learn: 37 terms</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="is_admin">owner</string>
    <string name="change_role">Change role</string>
</resources>