<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/LogInLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_logo_app_1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/LogInTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/loginTitle"
        android:textColor="@color/textColorPrimary"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_bold"/>

    <LinearLayout
        android:id="@+id/LogInFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogInTextView"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/LogInEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounder_corner"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:maxLines="1"
            android:padding="16dp"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/LogInPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounder_corner"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/LogInButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/primaryColor"
            android:importantForAutofill="no"
            android:text="@string/login"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/roboto_bold"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textColor="@color/brightRed"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_bold_italic"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogInFormLayout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/LogInSignInPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_bold_italic"
            android:text="@string/haveNoAccount"/>

        <TextView
            android:id="@+id/createAccountLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/brightRed"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/signUpLink"/>
    </LinearLayout>
</RelativeLayout>