<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/forgotPasswordUpperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="130dp">

        <ImageView
            android:id="@+id/forgotPasswordLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/forgotPasswordLogo"
            android:src="@drawable/ic_lock"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordTitle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/forgotPasswordSubTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordSubtext"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgotPasswordFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPasswordUpperLayout"

        android:orientation="vertical">

        <EditText
            android:id="@+id/forgotPasswordEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounder_corner"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:maxLines="1"
            android:padding="16dp"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPasswordResetButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/primaryColor"
            android:importantForAutofill="no"
            android:text="@string/resetPasswordButton"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPasswordBackButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/primaryColor"
            android:importantForAutofill="no"
            android:text="@string/backButton"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

</RelativeLayout>