<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_gravity="top"
    android:padding="16dp"
    android:background="@color/primaryColor"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_account_circle"
        android:contentDescription="@string/UserImageDesc"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hello"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:padding="5dp"/>

    </LinearLayout>
</LinearLayout>