<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Logo and Notification -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logo_notification_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageButton
                    android:id="@+id/exitButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="Exit button"
                    android:src="@drawable/ic_exit"
                    app:layout_collapseMode="pin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@android:color/white" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/app_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/FlashCards"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/exitButton"
                    app:layout_constraintTop_toTopOf="parent">

                </com.google.android.material.textview.MaterialTextView>


                <ImageView
                    android:id="@+id/notification_iv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:src="@drawable/ic_notification"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Search Bar -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_cl"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/background_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_notification_cl">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="@dimen/_20ssp"
                    android:background="@drawable/background_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/search_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginHorizontal="@dimen/_16dp"
                        android:src="@drawable/ic_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25ssp"
                        android:text="@string/search"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/_16dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/search_iv"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Empty View -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/empty_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_15ssp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_cl"> <!-- Corrected Constraint -->

                <TextView
                    android:id="@+id/get_started_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"
                    android:text="@string/here_s_how_to_get_started"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/create_sets_cl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:visibility="visible"
                    android:background="@drawable/background_cardnew"
                    android:paddingVertical="@dimen/_15ssp"
                    android:paddingStart="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/get_started_tv">

                    <ImageView
                        android:id="@+id/plus_iv"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/plus"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/create_set_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10ssp"
                        android:text="@string/create_your_own_set"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/plus_iv"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Sets -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sets_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_cl"> <!-- Changed Constraint -->

                <TextView
                    android:id="@+id/sets_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sets"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sets_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sets_tv"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Folder -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/folder_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sets_cl">

                <TextView
                    android:id="@+id/folder_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/folder"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/folders_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/folder_tv"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
